# minimal-rp2040-usb-device

./: Cargo.toml  minimal-usb.code-workspace
minimal-dual-core-usb/: Cargo.toml  rust-toolchain.toml
minimal-dual-core-usb/src/: formatter.rs  main.rs  transport.rs  usb_device.rs
minimal-usb-protocol/: Cargo.toml
minimal-usb-protocol/src/: lib.rs
minimal-usb-server/: Cargo.toml
minimal-usb-server/src/: arguments.rs  main.rs
