[package]
edition = "2021"
name = "dual-core-usb"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.4", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }

defmt = "0.3"
defmt-rtt = "0.4"

usbd-hid = { version = "0.6" }

minimal-usb-protocol = { path = "../minimal-usb-protocol" }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface = "0.4"
embedded-graphics = "0.8"
heapless = "0.7"
postcard = { version = "1", features = ["use-defmt"] }
serde = { version = "1", default-features = false }
ssd1306 = "0.8"
static_cell = { version = "1.2", features = ["nightly"] }

[profile.release]
debug = 2
