[package]
name = "minimal-usb-client"
version = "0.1.0"
edition = "2021"
default-run = "minimal-usb-client"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
csv = "1.3.0"
futures = "0.3.28"
postcard = "1.0.8"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-serial = { git = "https://github.com/barafael/tokio-serial.git", features = [
    "libudev",
    "serde",
] }
itertools = "0.11.0"
heapless = "0.7.16"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
minimal-usb-protocol = { path = "../minimal-usb-protocol" }
clap = { version = "4.4.7", features = ["derive"] }

[patch.crates-io]
mio-serial = { git = "https://github.com/barafael/mio-serial.git" }
